[package]
name = "create3"
version = "0.1.0"
edition = "2021"

[dependencies]
cast = { git = "https://github.com/foundry-rs/foundry", rev = "843e1350b516772ff41b2caec8a09db011b41b99"}
ethers = { version = "2.0", features = ["rustls"] }
ethers-core = { version = "2.0", default-features = false }

clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
regex = { version = "1", default-features = false }
eyre = "0.6"
rayon = "1"
protobuf = "=3.2.0"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
